// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros client-side: client-side 1`] = `

import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation")

      ↓ ↓ ↓ ↓ ↓ ↓

import __a from "./a.ssr-computation";
import { useSSRComputationServer } from "use-ssr-computation/lib/useSSRComputation";
const x = useSSRComputationServer("./a.ssr-computation");


`;

exports[`macros multiple-imports: multiple-imports 1`] = `

import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation")
const y = useSSRComputation("./a.ssr-computation")

      ↓ ↓ ↓ ↓ ↓ ↓

import { useSSRComputationClient } from "use-ssr-computation/lib/useSSRComputation";
const x = useSSRComputationClient("./a.ssr-computation");
const y = useSSRComputationClient("./a.ssr-computation");


`;

exports[`macros no usage: no usage 1`] = `

import { useSSRComputation } from "../lib/index.macro"

      ↓ ↓ ↓ ↓ ↓ ↓



`;

exports[`macros server-side: server-side 1`] = `

import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation");

      ↓ ↓ ↓ ↓ ↓ ↓

import { useSSRComputationClient } from "use-ssr-computation/lib/useSSRComputation";
const x = useSSRComputationClient("./a.ssr-computation");


`;
